2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Support case-insensitive ZFS subvolumes.

	* grub-core/fs/zfs/zfs.c (mzap_lookup): New parameter case_insensitive.
	All users updated.
	(zap_hash): Likewise.
	(name_cmp): New function.
	(zap_leaf_array_equal): New parameter case_insensitive.
	All users updated.
	(zap_leaf_lookup): Likewise.
	(fzap_lookup): Likewise.
	(zap_lookup): Likewise.
	(dnode_get_path): New parameter case_insensitive. Retrieve case
	sensitiviness of a volume. All users updated.
	(dnode_get_fullpath): New parameter case_insensitive.
	All users updated.
	(grub_zfs_dir): Set info.case_insensitiveness.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Support second redundancy strip on raidz(2,3).

	* grub-core/fs/zfs/zfs.c (powx): New array.
	(powx_inv): Likewise.
	(poly): New const.
	(xor_out): New function.
	(gf_mul): Likewise.
	(recovery): Likewise.
	(read_device): Use second redundancy strip.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Use a power of generator representation of GF(256) multiplication group
	to save space time and complexity.

	* grub-core/disk/raid6_recover.c (raid6_table1): Removed.
	(raid6_table2): Likewise.
	(powx): New array.
	(powx_inv): Likewise.
	(poly): New const.
	(grub_raid_block_mul): Replace with ...
	(grub_raid_block_mulx): ...this.
	(grub_raid6_init_table): Rewritten.
	(grub_raid6_recover): Use power of generator representation.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid6_recover.c (grub_raid6_recover): Get start_sector
	for the right device.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (grub_module_header): Make type into uint32 as
	expected by grub-mkimage and it's more clear since there is no implicit
	padding.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (scan_devices): Don't derference NULL on whole
	disk.
	* grub-core/disk/lvm.c (do_lvm_scan): Likewise.
